--- a/panel.html
+++ b/panel.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="bx-header">
-      <div class="bx-title">Breeze — Offline Reader</div>
+      <div class="bx-title">PocketScholar—Local</div>
       <div class="bx-url" id="pageUrl"></div>
     </header>
 
